[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/multiplayer/InfoLoader.gd" type="Script" id=1]
[ext_resource path="res://src/HyperRequest/HyperRequest.gd" type="Script" id=2]
[ext_resource path="res://src/HyperRequest/HyperUploader.gd" type="Script" id=3]

[node name="InfoLoader" type="Node"]
script = ExtResource( 1 )

[node name="loadInfoRequest" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="loadImageRequest" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="updateInfoRequest" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="resolveURLRequest" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="uploader" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="request_completed" from="loadInfoRequest" to="." method="_on_loadInfoRequest_request_completed"]
[connection signal="request_completed" from="loadImageRequest" to="." method="_on_loadImageRequest_request_completed"]
[connection signal="request_completed" from="updateInfoRequest" to="." method="_on_updateInfoRequest_request_completed"]
[connection signal="request_completed" from="resolveURLRequest" to="." method="_on_resolveURLRequest_request_completed"]
[connection signal="uploaded" from="uploader" to="." method="_on_uploader_uploaded"]
